--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -140,13 +140,13 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 10<br>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-text u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro V2 21H2 by Adderly (14.08.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro V3 21H2 by Adderly (15.10.2022)<br>
         </h6>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows1021H2byAdderly-2022-08-14-21-37-12.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows1021H2byAdderly-2022-08-14-21-38-11.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows10x64-2022-10-15-15-57-49.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows10x64-2022-10-15-15-58-15.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
         <p class="u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
@@ -154,15 +154,14 @@
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
           <br>Включён DirectPlay&nbsp;<br>
-          <br>Отключен файл подкачки<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу
  (по желанию можно выключить)<br>
-          <br>Образ весит 6.5 GB, после установки Windows занимает 19.8 GB (стандартная 21H2 занимает 24 GB) <br>
+          <br>Образ весит 6.1 GB, после установки Windows занимает 21.6 GB (стандартная 21H2 занимает 24 GB) <br>
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1jSfHGmjKvO82IhDkUoEbl-PSPQHujzhd/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/9yeplmj1nrptgkq/Windows+10+21H2+V2+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/88BlRRhJ#H5dWFeCpkpilClUb7sUclM_tfnpC0jR1n9PRocZBPU0" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MEGA.NZ]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/uq8b7eowhg07zvm/Windows+10+21H2+V3+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/vN5nDabZ#CRhwjA_rJfU4oU5VtcTrmsVNd2pkDvfN-F7WdniG1bM" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro V2 1709 by Adderly (15.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows101709-2022-08-15-15-25-16.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows101709-2022-08-15-15-23-25.png" alt="" data-image-width="1366" data-image-height="768">
