--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -159,12 +159,12 @@
           <br>Образ весит 6.1 GB, после установки Windows занимает 21.6 GB (стандартная 21H2 занимает 24 GB) <br>
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
         </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1SSqfGqQVGiFPibwDvBaNdA7NkHT9gmep/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [Google Drive]</a>
         <a href="https://www.mediafire.com/file/uq8b7eowhg07zvm/Windows+10+21H2+V3+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/vN5nDabZ#CRhwjA_rJfU4oU5VtcTrmsVNd2pkDvfN-F7WdniG1bM" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V3 21H2 by Adderly [MEGA.NZ]</a>
-        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro V2 1709 by Adderly (15.08.2022)</h6>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows101709-2022-08-15-15-25-16.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows101709-2022-08-15-15-23-25.png" alt="" data-image-width="1366" data-image-height="768">
+        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro V3 1709 by Adderly (15.10.2022)</h6>
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows10x64-2022-10-15-19-45-20.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows10x64-2022-10-15-19-45-52.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-08-15152355.png" alt="" data-image-width="589" data-image-height="264">
         <p class="u-text u-text-default-xl u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления.&nbsp;<br>
           <br> Удалены приложения "​Камера, Почта, One Note, Windows Photos, Windows Sound Recorder, Get Started, People , Xbox, Windows Store" <br>
@@ -172,12 +172,12 @@
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
           <br>Включён DirectPlay&nbsp;<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
-          <br>Образ весит 5.32 GB, после установки Windows занимает 11 GB <br>
+          <br>Образ весит 5.00 GB, после установки Windows занимает 11 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1ee90-yibkYTH7jZH6C2QdXX635H9H1nW/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/4bg2zfrs5gumxcu/Windows+10+1709+V2+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/K0UxQAaT#f9g8DW5uyqYoGpOmNtv02kbsaVwFb12Oa5d5P5wJsmY" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-6" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1SFUNTdhc4DHmYd_KzztEqVaCYc428vjY/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 10 Pro V3 1709 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/bgur56u7b9ofl4d/Windows+10+1709+V3+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Скачать Windows 10 Pro V3 1709 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/r1ckQQJY#uKh8_CyvS05eLjVgVsSpvhBGoJCy0Jitj-k_-scRaqg" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-6" target="_blank">Скачать Windows 10 Pro V3 1709 by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-6">Windows 10 Pro 1607 V2 by Adderly (19.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/Windows101607V2byAdderly-2022-08-19-22-05-30.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows101607V2byAdderly-2022-08-19-22-06-49.png" alt="" data-image-width="1366" data-image-height="768">
