--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -142,7 +142,7 @@
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-white u-text-1">Сборки Windows 7</h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V5 by Adderly (09.10.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V6 by Adderly (19.10.2022)<br>
         </h6>
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7x64-2022-10-10-12-12-37.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows7x64-2022-10-10-12-13-07.png" alt="" data-image-width="1366" data-image-height="768">
@@ -150,20 +150,20 @@
         <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7x64-2022-10-10-12-33-29.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7x64-2022-10-10-12-33-15.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center-lg u-align-center-md u-text u-text-white u-text-3"> Обновления на октябрь 2022 год. (Service Pack 1) <br>
+        <p class="u-align-center-lg u-align-center-md u-text u-text-white u-text-3"> Обновления на октябрь 2022 год. (Service Pack 1)&nbsp;<br>Включая платные обновления с продленной поддержкой до 2023 года.<br>Продлены сертификаты до 2050х годов.<br>После обновления Windows - будет слетать патч тем, он есть в папке, либо его можно скачать ниже.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находится активатор, и инсталяторы самых нужных и авторских программ <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Добавлены темы Windows 8.1, и 10 (по желанию можно удалить)&nbsp;<br>Добавлены темы с обоями Windows Vista, 11<br>
           <br>Отключены гаджеты&nbsp;(по желанию можно вернуть)&nbsp;<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
-          <br>Образ весит 5.46 GB, после установки Windows занимает 16.4 GB. <br>
+          <br>Образ весит 6.85 GB, после установки Windows занимает 16.4 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.<br>
           <br>Чтобы работали темы в сборке, нужно докачать патчер ниже.
         </p>
-        <a href="https://drive.google.com/file/d/1kLiVEEdo4CVNg2KHUvFDQ08OJQg8-_s-/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V5 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/9amgz1s9h0yjeec/Windows+7+V5+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V5 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/7dpzASBZ#k74bk9T0nFx3aoCg7-O-BGvj4QtSkDOeOiOGssBwR_w" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows 7 Ultimate V5 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/12O6iCwCWXKQ3IpHc8E4DFkPGBZumUcKq/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V6 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/r0dxu173t2ly26s/Windows+7+V6+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V6 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/bUJxDLQS#cneoga-pVOidOCgDHEFv27b9MOQ-MUe3dZ7kEYVQckA" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows 7 Ultimate V6 by Adderly [MEGA.NZ]</a>
         <a href="https://www.mediafire.com/file/t78spt68gorstmd/UniversalThemePatcher.exe/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-4" target="_blank">Скачать Universal Theme Patcher для тем Windows 7</a>
         <h6 class="u-text u-text-white u-text-4">Windows 7 Ultimate V3.1 by Adderly (27.07.2022)<br>
         </h6>
