--- a/Обновления-для-Windows.html
+++ b/Обновления-для-Windows.html
@@ -142,20 +142,23 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Обновления для Windows</h1>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/dxwebsetup.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-1">DirectX 9</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/Windows%207%20%D0%A6%D0%B5%D0%BD%D1%82%D1%80%20%D0%BE%D0%B1%D0%BD%D0%BE%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B9.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-2">Обновление для центра обновлений Windows 7 x64</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/isrgrootx1.der" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-3">Обновление сертификатов для старых Windows 7</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/isrgrootx1.der" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-2">Обновление сертификатов для старых Windows 7</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/Windows%207%20%D0%A6%D0%B5%D0%BD%D1%82%D1%80%20%D0%BE%D0%B1%D0%BD%D0%BE%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B9.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-3">Обновление для центра обновлений Windows 7 x64</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/Windows%208.0%20%D0%A6%D0%B5%D0%BD%D1%82%D1%80%20%D0%BE%D0%B1%D0%BD%D0%BE%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B9.msu" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-4"> Обновление для центра обновлений Windows 8.0 x64</a>
         <a href="https://drive.google.com/file/d/1wFiVKbYEFhHyxFX13RrDiLOvTEkuaxS2/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-5">Обновление Windows 8.1 Update 3 x86</a>
         <a href="https://drive.google.com/file/d/1Clu1zW4xs2dimSujcDe8tLiYoxXiKpAH/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-6">Обновление Windows 8.1 Update 3 x64</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/ndp48-web.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-7">NET.Framework 4.8</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2005%2032.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-8">Microsoft Visual C++ Redist 2005 x86</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2005%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-9"> Microsoft Visual C++ Redist 2005 x64</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2008%2032.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-10">Microsoft Visual C++ Redist 2008 x86</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2008%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-11"> Microsoft Visual C++ Redist 2008 x64</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2010%2032.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-12">Microsoft Visual C++ Redist 2010 x86</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2010%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-13"> Microsoft Visual C++ Redist 2010 x64</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2012%2032.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-14">Microsoft Visual C++ Redist 2012 x86</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2012%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-15"> Microsoft Visual C++ Redist 2012 x64</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/Update_Root_Certificates_v1.6.zip" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-8">Обновление сертификатов до 2050 годов, для (Windows XP и выше)</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2005%2032.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-9">Microsoft Visual C++ Redist 2005 x86</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2005%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-10"> Microsoft Visual C++ Redist 2005 x64</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2008%2032.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-11">Microsoft Visual C++ Redist 2008 x86</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2008%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-12"> Microsoft Visual C++ Redist 2008 x64</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2010%2032.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-13">Microsoft Visual C++ Redist 2010 x86</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2010%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-14"> Microsoft Visual C++ Redist 2010 x64</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2012%2032.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-15">Microsoft Visual C++ Redist 2012 x86</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2012%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-16"> Microsoft Visual C++ Redist 2012 x64</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2015-2022%2086.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-17">Microsoft Visual C++ Redist 15-22 x86</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2015-2022%2064.exe" class="u-border-none u-btn u-button-style u-custom-color-14 u-btn-18"> Microsoft Visual C++ Redist ​15-22 x64</a>
       </div>
     </section>
     
