--- a/index.html
+++ b/index.html
@@ -358,151 +358,15 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </div>
         </div>
         <h2 class="u-text u-text-white u-text-4"> Другие страницы, которые могут быть полезны!</h2>
-        <div class="u-carousel u-expanded-width-xs u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-2" id="carousel-557e" data-interval="5000" data-u-ride="carousel">
-          <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-2">
-            <li data-u-target="#carousel-557e" data-u-slide-to="0" class="u-active u-active-custom-color-25 u-hover-custom-color-28 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-557e" data-u-slide-to="1" class="u-active-custom-color-25 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-557e" data-u-slide-to="2" class="u-active-custom-color-25 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-557e" data-u-slide-to="3" class="u-active-custom-color-25 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-557e" data-u-slide-to="4" class="u-active-custom-color-25 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-557e" data-u-slide-to="5" class="u-active-custom-color-25 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-557e" data-u-slide-to="6" class="u-active-custom-color-25 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
-            <li data-u-target="#carousel-557e" data-u-slide-to="7" class="u-active-custom-color-25 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
-          </ol>
-          <div class="u-carousel-inner u-gallery-inner" role="listbox">
-            <div class="u-active u-carousel-item u-effect-fade u-gallery-item u-carousel-item-11" data-image-width="3840" data-image-height="2160" data-href="Информация-о-сборках.html" data-page-id="254799920">
-              <div class="u-back-slide u-back-slide-11" data-image-width="1920" data-image-height="1440">
-                <img class="u-back-image u-expanded" src="images/img17.jpg" alt="Информация о сборках от Аддерли">
-              </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-11">
-                <h3 class="u-gallery-heading">Информация о сборках от Аддерли</h3>
-                <p class="u-gallery-text" style="font-weight: 400;">Подробная информация, содержимое папок, и остальное!</p>
-              </div>
-              <style data-mode="XL" data-visited="true"></style>
-              <style data-mode="LG" data-visited="true"></style>
-              <style data-mode="MD" data-visited="true"></style>
-              <style data-mode="SM" data-visited="true"></style>
-              <style data-mode="XS" data-visited="true"></style>
-            </div>
-            <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-12" data-href="Софт-от-Аддерли.html" data-page-id="21398082">
-              <div class="u-back-slide u-back-slide-12" data-image-width="640" data-image-height="360">
-                <img src="images/Third-Party-Anti-virus-Software-Blocks-Windows-8-Modern-Apps-2-1024x537.jpg" alt="" data-image-width="2000" data-image-height="1333" class="u-back-image u-expanded">
-              </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-12">
-                <h3 class="u-gallery-heading">Софт от Аддерли</h3>
-                <p class="u-gallery-text" style="font-weight: 400;">Бесплатно скачать репаки можно только тут!</p>
-              </div>
-            </div>
-            <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-13" data-image-width="1920" data-image-height="600" data-href="Обновления-для-Windows.html" data-page-id="72177041">
-              <div class="u-back-slide u-back-slide-13" data-image-width="640" data-image-height="359">
-                <img class="u-back-image u-expanded u-back-image-13" src="images/71.png" alt="Обновления Windows">
-              </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-13">
-                <h3 class="u-gallery-heading">Обновления Windows</h3>
-                <p class="u-gallery-text" style="font-weight: 400;">Редисты, центры обновлений, сертификаты, всё тут!</p>
-              </div>
-              <style data-mode="XL" data-visited="true"></style>
-              <style data-mode="LG" data-visited="true"></style>
-              <style data-mode="MD" data-visited="true"></style>
-              <style data-mode="SM" data-visited="true"></style>
-              <style data-mode="XS" data-visited="true"></style>
-            </div>
-            <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-14" data-image-width="1920" data-image-height="1200" data-href="Ключи-от-Аддерли.html" data-page-id="271508222">
-              <div class="u-back-slide u-back-slide-14" data-image-width="640" data-image-height="360">
-                <img class="u-back-image u-expanded" src="images/rfgtw9.png" alt="Ключи от Аддерли">
-              </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-14">
-                <h3 class="u-gallery-heading">Ключи от Аддерли</h3>
-                <p class="u-gallery-text" style="font-weight: 400;">Получить ключи для всех версий Windows!</p>
-              </div>
-              <style data-mode="XL" data-visited="true"></style>
-              <style data-mode="LG" data-visited="true"></style>
-              <style data-mode="MD" data-visited="true"></style>
-              <style data-mode="SM" data-visited="true"></style>
-              <style data-mode="XS" data-visited="true"></style>
-            </div>
-            <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-15" data-image-width="1920" data-image-height="1200" data-href="Старые-версии-Windows.html" data-page-id="576721080">
-              <div class="u-back-slide u-back-slide-15" data-image-width="640" data-image-height="360">
-                <img class="u-back-image u-expanded u-back-image-15" src="images/8.png" alt="Старые Windows">
-              </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-15">
-                <h3 class="u-gallery-heading">Старые Windows</h3>
-                <p class="u-gallery-text" style="font-weight: 400;">Скачать оригинальные старые Windows, начиная с 3.11, заканчивая Vista</p>
-              </div>
-              <style data-mode="XL" data-visited="true"></style>
-              <style data-mode="LG" data-visited="true"></style>
-              <style data-mode="MD" data-visited="true"></style>
-              <style data-mode="SM" data-visited="true"></style>
-              <style data-mode="XS" data-visited="true"></style>
-            </div>
-            <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-16" data-image-width="1920" data-image-height="1200" data-href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472">
-              <div class="u-back-slide u-back-slide-16" data-image-width="640" data-image-height="360">
-                <img class="u-back-image u-expanded" src="images/43545.png" alt="Старый софт для Windows XP">
-              </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-16">
-                <h3 class="u-gallery-heading">Старый софт для Windows XP</h3>
-                <p class="u-gallery-text" style="font-weight: 400;">Набор программ для старых систем и ПК</p>
-              </div>
-              <style data-mode="XL" data-visited="true"></style>
-              <style data-mode="LG" data-visited="true"></style>
-              <style data-mode="MD" data-visited="true"></style>
-              <style data-mode="SM" data-visited="true"></style>
-              <style data-mode="XS" data-visited="true"></style>
-            </div>
-            <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-17" data-image-width="3839" data-image-height="2400" data-href="Windows-Lite-x32-сборки.html" data-page-id="82559784">
-              <div class="u-back-slide u-back-slide-17" data-image-width="1920" data-image-height="1200">
-                <img class="u-back-image u-expanded" src="images/img04.jpg" alt="Сборки Windows Lite x32">
-              </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-17">
-                <h3 class="u-gallery-heading">Сборки Windows Lite x32</h3>
-                <p class="u-gallery-text" style="font-weight: 400;">Крайне легкие сборки для крайне слабых ПК</p>
-              </div>
-              <style data-mode="XL" data-visited="true"></style>
-              <style data-mode="LG" data-visited="true"></style>
-              <style data-mode="MD" data-visited="true"></style>
-              <style data-mode="SM" data-visited="true"></style>
-              <style data-mode="XS" data-visited="true"></style>
-            </div>
-            <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-18" data-image-width="640" data-image-height="360" data-href="Проверка-на-целостность.html" data-page-id="281617986">
-              <div class="u-back-slide u-back-slide-18" data-image-width="640" data-image-height="360">
-                <img class="u-back-image u-expanded" src="images/9.png" alt="Проверки на целостность">
-              </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-18">
-                <h3 class="u-gallery-heading">Проверки на целостность</h3>
-                <p class="u-gallery-text" style="font-weight: 400;">Информация о целостности прошлых версий, и описание проверок.</p>
-              </div>
-              <style data-mode="XL" data-visited="true"></style>
-              <style data-mode="LG" data-visited="true"></style>
-              <style data-mode="MD" data-visited="true"></style>
-              <style data-mode="SM" data-visited="true"></style>
-              <style data-mode="XS" data-visited="true"></style>
-            </div>
-          </div>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-custom-color-1 u-hover-custom-color-11 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-3" href="#carousel-557e" role="button" data-u-slide="prev">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-          </a>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-custom-color-1 u-hover-custom-color-11 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-4" href="#carousel-557e" role="button" data-u-slide="next">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-          </a>
-        </div>
+        <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-5" target="_blank">Информация о Сборках от Аддерли</a>
+        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius-50 u-btn-6" target="_blank">Софт от Аддерли</a>
+        <a href="Библиотека-Образов.html" data-page-id="74119563" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-7" target="_blank">Библиотенка образов Windows</a>
+        <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-8" target="_blank">Обновления Windows</a>
+        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-9" target="_blank">Ключи от Аддерли</a>
+        <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-10" target="_blank">Старые Windows</a>
+        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-11" target="_blank">Старый софт для Windows XP</a>
+        <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-radius-50 u-btn-12" target="_blank">Сборки Windows Lite x32</a>
+        <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-13" target="_blank">Старые проверки на целостность</a>
       </div>
     </section>
     <section class="u-clearfix u-grey-80 u-section-2" id="sec-f0ab">
