--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -70,6 +70,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
@@ -110,6 +111,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Оригинальные-Windows.html">Оригинальные Windows</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
@@ -365,8 +367,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-9" target="_blank">Ключи от Аддерли</a>
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-10" target="_blank">Старые Windows</a>
         <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-11" target="_blank">Старый софт для Windows XP</a>
-        <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-radius-50 u-btn-12" target="_blank">Сборки Windows Lite x32</a>
-        <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-13" target="_blank">Старые проверки на целостность</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-radius-50 u-btn-12" target="_blank">Сборки Windows Lite x32</a>
+        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-13" target="_blank">Старые проверки на целостность</a>
       </div>
     </section>
     <section class="u-clearfix u-grey-80 u-section-2" id="sec-f0ab">
